Small changes to naming and analysis

--- a/magnumfe_projection.ipynb
+++ b/magnumfe_projection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r\"D:\\Magnumfe\\al6-1-1_asbuiltextnotop\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +68,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate raytracing"
+    "## Generate raytracing - skip if generated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,17 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File not found. Generating shuffle indx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "magnetisation, mag_points = load_mesh_magnetisation(mag_files[-1])\n",
     "shuffle_file = os.path.join(data_folder, \"shuffle_indx.npy\")\n",
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,9 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                         | 0/42 [00:00<?, ?it/s]D:\\Programs\\xmcd-projection\\xmcd_projection\\mesh_visualisation.py:155: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  img /= new1\n",
+      "100%|████████████████████████████████| 42/42 [01:29<00:00,  2.13s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
@@ -335,9 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                         | 0/42 [00:00<?, ?it/s]D:\\Programs\\xmcd-projection\\xmcd_projection\\mesh_visualisation.py:161: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  img /= 1 - new0\n",
+      "100%|████████████████████████████████| 42/42 [01:29<00:00,  2.13s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
@@ -380,21 +392,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = 'D:\\\\Magnumfe\\\\al6-1-1_peem_profile2_001'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 121/121 [00:10<00:00, 11.39it/s]"
+      "100%|██████████████████████████████| 121/121 [00:30<00:00,  3.94it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The output video is D:\\Magnumfe\\al6-1-1_peem_profile2\\processed\\projection_movie_blurred.mp4\n"
+      "The output video is D:\\Magnumfe\\al6-1-1_peem_profile2_001\\processed\\projection_movie_blurred1.mp4\n"
      ]
     },
     {
@@ -411,7 +432,7 @@
     "FPS = 10\n",
     "\n",
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection_blurred')\n",
-    "out_file = os.path.join(folder_path, 'processed', 'projection_movie_blurred.mp4')\n",
+    "out_file = os.path.join(folder_path, 'processed', 'projection_movie_blurred1.mp4')\n",
     "image_files = glob(os.path.join(savedir, '*.png'))\n",
     "\n",
     "indx = [int(imgf.split('.')[-2].split('_')[-1]) for imgf in image_files]\n",
@@ -444,96 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0it [00:00, ?it/s]\u001b[A\n",
-      "1it [00:01,  1.09s/it]\u001b[A\n",
-      "3it [00:01,  3.12it/s]\u001b[A\n",
-      "5it [00:01,  4.05it/s]\u001b[A\n",
-      "7it [00:01,  5.16it/s]\u001b[A\n",
-      "9it [00:01,  7.00it/s]\u001b[A\n",
-      "13it [00:02,  9.92it/s]\u001b[A\n",
-      "15it [00:02,  6.92it/s]\u001b[A\n",
-      "17it [00:03,  5.98it/s]\u001b[A\n",
-      "18it [00:03,  5.84it/s]\u001b[A\n",
-      "19it [00:03,  5.50it/s]\u001b[A\n",
-      "20it [00:03,  6.03it/s]\u001b[A\n",
-      "21it [00:03,  5.78it/s]\u001b[A\n",
-      "22it [00:04,  5.24it/s]\u001b[A\n",
-      "23it [00:04,  5.17it/s]\u001b[A\n",
-      "24it [00:04,  4.46it/s]\u001b[A\n",
-      "25it [00:04,  4.83it/s]\u001b[A\n",
-      "26it [00:04,  4.90it/s]\u001b[A\n",
-      "27it [00:05,  4.67it/s]\u001b[A\n",
-      "28it [00:05,  5.16it/s]\u001b[A\n",
-      "29it [00:05,  4.97it/s]\u001b[A\n",
-      "31it [00:05,  5.83it/s]\u001b[A\n",
-      "32it [00:06,  5.13it/s]\u001b[A\n",
-      "33it [00:06,  4.95it/s]\u001b[A\n",
-      "34it [00:06,  5.00it/s]\u001b[A\n",
-      "35it [00:06,  5.80it/s]\u001b[A\n",
-      "36it [00:06,  5.89it/s]\u001b[A\n",
-      "38it [00:06,  7.28it/s]\u001b[A\n",
-      "39it [00:07,  7.76it/s]\u001b[A\n",
-      "40it [00:07,  7.25it/s]\u001b[A\n",
-      "42it [00:07,  7.38it/s]\u001b[A\n",
-      "44it [00:07,  9.69it/s]\u001b[A\n",
-      "46it [00:07,  9.56it/s]\u001b[A\n",
-      "48it [00:08,  7.76it/s]\u001b[A\n",
-      "49it [00:08,  6.86it/s]\u001b[A\n",
-      "50it [00:08,  7.01it/s]\u001b[A\n",
-      "51it [00:08,  6.56it/s]\u001b[A\n",
-      "53it [00:08,  7.77it/s]\u001b[A\n",
-      "54it [00:09,  7.40it/s]\u001b[A\n",
-      "55it [00:09,  7.00it/s]\u001b[A\n",
-      "57it [00:09,  7.17it/s]\u001b[A\n",
-      "58it [00:09,  6.38it/s]\u001b[A\n",
-      "60it [00:10,  6.53it/s]\u001b[A\n",
-      "61it [00:10,  6.57it/s]\u001b[A\n",
-      "62it [00:10,  6.69it/s]\u001b[A\n",
-      "63it [00:10,  6.55it/s]\u001b[A\n",
-      "64it [00:10,  6.44it/s]\u001b[A\n",
-      "65it [00:10,  6.48it/s]\u001b[A\n",
-      "66it [00:10,  6.55it/s]\u001b[A\n",
-      "67it [00:11,  6.05it/s]\u001b[A\n",
-      "68it [00:11,  6.35it/s]\u001b[A\n",
-      "69it [00:11,  6.40it/s]\u001b[A\n",
-      "70it [00:11,  6.69it/s]\u001b[A\n",
-      "72it [00:11,  9.10it/s]\u001b[A\n",
-      "74it [00:11,  9.01it/s]\u001b[A\n",
-      "76it [00:12, 10.71it/s]\u001b[A\n",
-      "78it [00:12, 11.02it/s]\u001b[A\n",
-      "80it [00:12, 10.43it/s]\u001b[A\n",
-      "82it [00:12,  9.03it/s]\u001b[A\n",
-      "83it [00:12,  7.90it/s]\u001b[A\n",
-      "85it [00:13,  9.46it/s]\u001b[A\n",
-      "87it [00:13,  8.80it/s]\u001b[A\n",
-      "90it [00:13, 10.44it/s]\u001b[A\n",
-      "92it [00:13,  8.85it/s]\u001b[A\n",
-      "93it [00:13,  8.21it/s]\u001b[A\n",
-      "97it [00:14, 12.92it/s]\u001b[A\n",
-      "101it [00:14, 17.01it/s]\u001b[A\n",
-      "104it [00:14, 19.49it/s]\u001b[A\n",
-      "108it [00:14, 22.73it/s]\u001b[A\n",
-      "112it [00:14, 25.31it/s]\u001b[A\n",
-      "116it [00:14, 27.25it/s]\u001b[A\n",
-      "121it [00:14,  8.14it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The output video is D:\\Magnumfe\\al6-1-1_asbuiltextnotop\\processed\\projection_movie_blurred.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "from tqdm import tqdm\n",
@@ -581,9 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████| 84652/84652 [10:29<00:00, 134.49it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "folder_path = r\"D:\\Magnumfe\\angles_initialisation\"\n",
     "\n",
@@ -591,30 +533,46 @@
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
     "msh_file = glob(os.path.join(data_folder, \"*.msh\"))[0]\n",
     "\n",
-    "mesh = get_mesh(msh_file)\n",
-    "struct = get_struct_from_mesh(mesh)\n",
-    "p = get_projection_vector(90, 16)\n",
-    "projected_structure = project_structure_byvector(struct, p=p)\n",
     "\n",
-    "magnetisation, _ = get_magnumfe_magnetisation(mag_files[-1])\n",
-    "xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
-    "mag_colors = get_struct_face_mag_color(struct, magnetisation)"
+    "msh = Mesh.from_file(msh_file)\n",
+    "raytracing_file = os.path.join(data_folder, \"raytracing.npy\")\n",
+    "if os.path.exists(raytracing_file):\n",
+    "    raytr = np.load(raytracing_file, allow_pickle=True).item()\n",
+    "    p = raytr.p\n",
+    "else:\n",
+    "    p = get_projection_vector(90, 16)\n",
+    "    # prepare raytracing object\n",
+    "    raytr = RayTracing(msh, p)\n",
+    "    raytr.get_piercings()\n",
+    "    np.save(raytracing_file, raytr, allow_pickle=True)\n",
+    "    \n",
+    "struct = raytr.struct\n",
+    "struct_projected = raytr.struct_projected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis = MagnumfeVisualizer(struct, struct_projected, xmcd_value, struct_colors=mag_colors)\n",
-    "vis.show()\n",
-    "vis.set_camera(azi=18, center=vis.get_structs_center(), dist=6e5)"
+    "magnetisation, _ = load_mesh_magnetisation(mag_files[-1])\n",
+    "xmcd_value = raytr.get_xmcd(magnetisation)\n",
+    "mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
+    "\n",
+    "vis = MeshVisualizer(struct, struct_projected, xmcd_value, struct_colors=mag_colors)\n",
+    "\n",
+    "azi=90\n",
+    "center_struct = [-100, 100, 0]\n",
+    "dist_struct = 1e5\n",
+    "center_peem = [600, -5000, 0]\n",
+    "dist_peem = 7e5\n",
+    "vis.show(azi=azi, center=center_peem, dist=dist_peem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +581,7 @@
        "'al6-1-1_peem_angle-15'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,152 +592,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████| 14/14 [00:24<00:00,  1.75s/it]\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection')\n",
-    "if not os.path.exists(savedir):\n",
-    "    os.makedirs(savedir)\n",
+    "savedir_blurred = savedir+'_blurred'\n",
+    "savedir_structure = os.path.join(folder_path, 'processed', 'projected_structure')\n",
+    "for sd in (savedir, savedir_blurred, savedir_structure):\n",
+    "    if not os.path.exists(sd):\n",
+    "        os.makedirs(sd)\n",
     "    \n",
     "for mf in tqdm(mag_files):\n",
-    "    save_name = os.path.basename(mf).split('.')[0]+'.png'\n",
-    "    save_path = os.path.join(savedir, save_name)\n",
-    "    if os.path.exists(save_path):\n",
-    "        print('continuing')\n",
-    "        continue\n",
-    "    magnetisation, _ = get_magnumfe_magnetisation(mf)\n",
-    "#     magnetisation *= -1\n",
-    "    xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
+    "#     if os.path.exists(save_path):\n",
+    "#         print('continuing')\n",
+    "#         continue\n",
+    "    magnetisation, _ = load_mesh_magnetisation(mf)\n",
+    "    xmcd_value = raytr.get_xmcd(magnetisation)\n",
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
+    "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    image = vis.save_render(save_path)"
+    "    vis.view_projection(center=center_peem, dist=dist_peem)\n",
+    "    file_name = os.path.basename(mf).split('.')[0]+'.png'\n",
+    "    image = vis.save_render(os.path.join(savedir, file_name))\n",
+    "    \n",
+    "    # save the blurred image\n",
+    "    blurred = img2uint(vis.get_blurred_image(desired_background=desired_background))\n",
+    "    imsave(os.path.join(savedir_blurred, file_name), blurred, check_contrast=False)\n",
+    "    \n",
+    "    # save the image of the structure\n",
+    "    vis.view_struct(center=center_struct, dist=dist_struct)\n",
+    "    image = vis.save_render(os.path.join(savedir_structure, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|                                                                                           | 0/14 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "continuing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "  7%|█████▉                                                                             | 1/14 [00:00<00:01,  8.20it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "continuing\n",
-      "continuing\n",
-      "continuing\n",
-      "continuing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      " 43%|███████████████████████████████████▌                                               | 6/14 [00:13<00:07,  1.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "continuing\n",
-      "continuing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      " 64%|█████████████████████████████████████████████████████▎                             | 9/14 [00:27<00:09,  1.98s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "continuing\n",
-      "continuing\n",
-      "continuing\n",
-      "continuing\n",
-      "continuing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 14/14 [00:27<00:00,  1.95s/it]"
+      "100%|████████████████████████████████| 14/14 [00:25<00:00,  1.85s/it]\n"
      ]
     }
    ],
    "source": [
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection_inv')\n",
-    "if not os.path.exists(savedir):\n",
-    "    os.makedirs(savedir)\n",
+    "savedir_blurred = savedir+'_blurred'\n",
+    "savedir_structure = os.path.join(folder_path, 'processed', 'projected_structure_inv')\n",
+    "for sd in (savedir, savedir_blurred, savedir_structure):\n",
+    "    if not os.path.exists(sd):\n",
+    "        os.makedirs(sd)\n",
     "    \n",
     "for mf in tqdm(mag_files):\n",
-    "    save_name = os.path.basename(mf).split('.')[0]+'.png'\n",
-    "    save_path = os.path.join(savedir, save_name)\n",
-    "    if os.path.exists(save_path):\n",
-    "        print('continuing')\n",
-    "        continue\n",
-    "    magnetisation, _ = get_magnumfe_magnetisation(mf)\n",
+    "    magnetisation, _ = load_mesh_magnetisation(mf)\n",
     "    magnetisation *= -1\n",
-    "    xmcd_value = get_xmcd_from_piercings_list(mesh, magnetisation, piercings_list)\n",
+    "    xmcd_value = raytr.get_xmcd(magnetisation)\n",
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
+    "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
-    "    image = vis.save_render(save_path)"
+    "    vis.view_projection(center=center_peem, dist=dist_peem)\n",
+    "    file_name = os.path.basename(mf).split('.')[0]+'.png'\n",
+    "    image = vis.save_render(os.path.join(savedir, file_name))\n",
+    "    \n",
+    "    # save the blurred image\n",
+    "    blurred = img2uint(vis.get_blurred_image(desired_background=desired_background))\n",
+    "    imsave(os.path.join(savedir_blurred, file_name), blurred, check_contrast=False)\n",
+    "    \n",
+    "    # save the image of the structure\n",
+    "    vis.view_struct(center=center_struct, dist=dist_struct)\n",
+    "    image = vis.save_render(os.path.join(savedir_structure, file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\Magnumfe\\\\angles_initialisation'"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_path"
    ]
