--- a/magnumfe_projection.ipynb
+++ b/magnumfe_projection.ipynb
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2_7mT15deg_001\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,19 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                         | 0/42 [00:00<?, ?it/s]D:\\Programs\\xmcd-projection\\xmcd_projection\\mesh_visualisation.py:155: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  img /= new1\n",
-      "100%|████████████████████████████████| 42/42 [01:29<00:00,  2.13s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
@@ -515,39 +505,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████| 84652/84652 [10:29<00:00, 134.49it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "folder_path = r\"D:\\Magnumfe\\angles_initialisation\"\n",
+    "folder_path = r\"D:\\Magnumfe\\al6-1-1_peem_profile2_angles\"\n",
     "\n",
     "data_folder = os.path.join(folder_path, \"data\")\n",
     "mag_files = glob(os.path.join(data_folder, \"*.csv\"))\n",
-    "msh_file = glob(os.path.join(data_folder, \"*.msh\"))[0]\n",
     "\n",
-    "\n",
-    "msh = Mesh.from_file(msh_file)\n",
+    "# load raytracing if exists\n",
     "raytracing_file = os.path.join(data_folder, \"raytracing.npy\")\n",
-    "if os.path.exists(raytracing_file):\n",
-    "    raytr = np.load(raytracing_file, allow_pickle=True).item()\n",
-    "    p = raytr.p\n",
-    "else:\n",
-    "    p = get_projection_vector(90, 16)\n",
-    "    # prepare raytracing object\n",
-    "    raytr = RayTracing(msh, p)\n",
-    "    raytr.get_piercings()\n",
-    "    np.save(raytracing_file, raytr, allow_pickle=True)\n",
-    "    \n",
+    "raytr = np.load(raytracing_file, allow_pickle=True).item()\n",
     "struct = raytr.struct\n",
-    "struct_projected = raytr.struct_projected"
+    "struct_projected = raytr.struct_projected\n",
+    "shuffle_file = os.path.join(data_folder, \"shuffle_indx.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "magnetisation, mag_points = load_mesh_magnetisation(mag_files[1])\n",
+    "magnetisation = magnetisation[shuffle_indx, :]\n",
+    "xmcd_value = raytr.get_xmcd(magnetisation)\n",
+    "mag_colors = get_struct_face_mag_color(struct, magnetisation)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deep_reload(xmcd_projection)\n",
+    "# from xmcd_projection import *\n",
+    "azi=90\n",
+    "center_struct = [-100, 100, 0]\n",
+    "dist_struct = 1e5\n",
+    "center_peem = [600, -5000, 0]\n",
+    "dist_peem = 7e5\n",
+    "\n",
+    "vis = MeshVisualizer(struct, struct_projected, projected_xmcd=xmcd_value, struct_colors=mag_colors)\n",
+    "vis.show(azi=azi, center=center_peem, dist=dist_peem)"
    ]
   },
   {
@@ -592,7 +595,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'120deg_1.png'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.splitext(os.path.basename(mf))[0]+'.png'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -601,30 +624,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████| 14/14 [00:24<00:00,  1.75s/it]\n"
+      "100%|████████████████████████████████| 48/48 [01:50<00:00,  2.31s/it]\n"
      ]
     }
    ],
    "source": [
+    "desired_background = 0.7 # if not None, adjusts the contrast so that the background is of the desired value in the blurred image\n",
     "\n",
+    "# define save directories\n",
     "savedir = os.path.join(folder_path, 'processed', 'xmcd_projection')\n",
     "savedir_blurred = savedir+'_blurred'\n",
     "savedir_structure = os.path.join(folder_path, 'processed', 'projected_structure')\n",
     "for sd in (savedir, savedir_blurred, savedir_structure):\n",
     "    if not os.path.exists(sd):\n",
     "        os.makedirs(sd)\n",
-    "    \n",
+    "\n",
+    "# run and save\n",
     "for mf in tqdm(mag_files):\n",
-    "#     if os.path.exists(save_path):\n",
-    "#         print('continuing')\n",
-    "#         continue\n",
+    "#     file_num = int(mf.split('.')[-2])\n",
+    "    file_name = os.path.splitext(os.path.basename(mf))[0]+'.png'\n",
+    "    # get the magnetisation and xmcd\n",
     "    magnetisation, _ = load_mesh_magnetisation(mf)\n",
+    "    magnetisation = magnetisation[shuffle_indx, :]\n",
     "    xmcd_value = raytr.get_xmcd(magnetisation)\n",
     "    mag_colors = get_struct_face_mag_color(struct, magnetisation)\n",
     "    # update the view\n",
     "    vis.update_colors(xmcd_value, mag_colors)\n",
     "    vis.view_projection(center=center_peem, dist=dist_peem)\n",
-    "    file_name = os.path.basename(mf).split('.')[0]+'.png'\n",
     "    image = vis.save_render(os.path.join(savedir, file_name))\n",
     "    \n",
     "    # save the blurred image\n",
@@ -710,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
